--- a/src/main/resources/assets/carpet-flying/carpet/lang/en_us.json
+++ b/src/main/resources/assets/carpet-flying/carpet/lang/en_us.json
@@ -1,2 +1,7 @@
 {
+  "carpet-flying.rule.displayNamesOnPlayerList.desc": "Show display names on player list",
+  "carpet-flying.rule.displayNamesOnPlayerList.extra.0": "Required for player list manipulation rules to work.",
+  "carpet-flying.rule.displayNameCarpetBot.desc": "Display \"[bot] next to Carpet bot names\"",
+  "carpet-flying.rule.displayNameVanillaTweaksAFK.desc": "Display \"[afk] next to AFK player names\" (requires corresponding Vanilla Tweaks datapack)",
+  "carpet-flying.rule.displayNameVanillaTweaksAFK.extra.0": "Requires corresponding Vanilla Tweaks datapack."
 }
